# trackscape-discord-bot

./: .dockerignore  .env.example  .env.save  .gitignore  Cargo.toml  DeployNotes.md  Dockerfile  README.md  Secrets.toml  Secrets.toml.example  Worker.Dockerfile  docker-compose.yml  docker_compose.yml  index.js  justfile  package-lock.json  package.json  toolchain.toml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: checks.yml
commands/chatLog/: chatLog.js
commands/clan/: clan.js
commands/donations/: donations.js
commands/notOnDiscord/: notOnDiscord.js
commands/signup/: signup.js
commands/womSync/: womSync.js
dockerfiles/: CronWorker.Dockerfile  Shuttle.Dockerfile  Worker.Dockerfile
production/: DeployNotes.md  production-docker-compose.yml
services/: WebClient.js
src/: database.rs  ge_api.rs  main.rs  osrs_broadcast_extractor.rs
src/commands/: mod.rs  set_clan_chat_channel.rs
trackscape-discord-api/: Cargo.toml  Secrets.toml.example  Shuttle.toml
trackscape-discord-api/src/: cache.rs  handler.rs  main.rs  websocket.rs  websocket_server.rs  ws-test.html
trackscape-discord-api/src/controllers/: application_data_controller.rs  bot_info_controller.rs  chat_controller.rs  clan_controller.rs  drop_log_controller.rs  mod.rs
trackscape-discord-api/src/services/: mod.rs  osrs_broadcast_handler.rs
trackscape-discord-api/ui/: 200.html  _payload.json  index.html
trackscape-discord-api/ui/_nuxt/: entry.f2c12bfa.js  error-404.24f82330.js  error-500.55f9c8a0.js  index.89b1b9d2.js
trackscape-discord-api/ui/assets/: ClanListView-2d27690a.css  ClanListView-50efad10.js  ClanListView-cc522af6.js  ClanView-10c3b8c4.js  ClanView-413261cb.css  ClanView-eabc7033.js  CollectionLogLeaderboardView-68da58cc.js  CollectionLogLeaderboardView-de1d73cc.js  DataTable.vue_vue_type_script_setup_true_lang-26d15875.js  DataTable.vue_vue_type_script_setup_true_lang-3a3316ec.js  MembersView-5eecaa9b.js  MembersView-64e19a62.js  PageTitle.vue_vue_type_script_setup_true_lang-b454a958.js  PageTitle.vue_vue_type_script_setup_true_lang-b53c39aa.js  index-2b302cb5.js  index-2c18a9aa.css  index-3a698960.css  index-4d8bb280.js  index-549232a9.js  index-785d03f4.js  index-7d450bd6.js  index-95baca75.js  index-994264ce.js  index-9e88eef6.css  index-a88592a7.js  index-c22bc2ef.css  index-c6517449.js  index-d145a158.css  index-d6e904d3.js  index-dff543f3.js  index-e1a30dc8.css  index-ea687df1.js
trackscape-discord-bot/: Cargo.toml  Shuttle.toml
trackscape-discord-bot/src/: main.rs  on_boarding_message.rs
trackscape-discord-bot/src/commands/: broadcast_config_command.rs  expel_clanmate_command.rs  get_custom_drop_broadcast_filter.rs  get_verifcation_code.rs  get_verification_code.rs  info.rs  manually_run_wom_sync_command.rs  mod.rs  name_change_command.rs  reset_broadcasts_channels.rs  reset_broadcasts_thresholds.rs  reset_verification_code.rs  set_broadcast_channel.rs  set_clan_chat_channel.rs  set_clog_max_percentage.rs  set_custom_drop_broadcast_filter.rs  set_diary_min_command.rs  set_leagues_broadcast_channel.rs  set_quest_min_command.rs  set_threshold_command.rs  set_wom_id_command.rs  stop_leagues_notifications.rs  toggle_broadcasts.rs  toggle_broadcasts_command.rs  trackscape_command_trait.rs
trackscape-discord-cron-job-worker/: Cargo.toml
trackscape-discord-cron-job-worker/src/: main.rs
trackscape-discord-job-worker/: Cargo.toml
trackscape-discord-job-worker/src/: main.rs
trackscape-discord-shared/: Cargo.toml
trackscape-discord-shared/src/: api_web_client.rs  database.rs  ge_api.rs  helpers.rs  lib.rs  osrs_broadcast_extractor.rs  osrs_broadcast_handler.rs  redis_helpers.rs  wiki_api.rs
trackscape-discord-shared/src/database/: broadcasts.rs  clan_mate_collection_log_totals.rs  clan_mates.rs  drop_logs_db.rs  guilds_db.rs  mod.rs  pb_activities_db.rs  pb_records_db.rs
trackscape-discord-shared/src/dto/: bot_info_dto.rs  mod.rs
trackscape-discord-shared/src/jobs/: add_job.rs  job_helpers.rs  mod.rs  name_change_job.rs  new_pb_job.rs  parse_rl_chat_command.rs  redis_helpers.rs  remove_clanmate_job.rs  update_create_clanmate_job.rs  wom_guild_sync_job.rs  wom_guild_sync_logic.rs
trackscape-discord-shared/src/jobs/runelite_commands/: mod.rs  pb_command.rs
trackscape-discord-shared/src/wom/: mod.rs  responses.rs
trackscape-discord-ui/: .env.production  .eslintrc.cjs  README.md  app.vue  bun.lockb  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
trackscape-discord-ui-old/: .eslintrc.js  app.vue  bun.lockb  package.json
trackscape-discord-ui/pages/: index.vue
trackscape-discord-ui/public/: TermsOfService.html
trackscape-discord-ui/src/: App.vue  main.ts
trackscape-discord-ui/src/components/: BroadcastItem.vue  BroadcastList.vue  DataTable.vue  DiscordWidget.vue  Drawer.vue  NavDrawer.vue  NavItems.vue  PageTitle.vue  ThemePicker.vue  nav-menu.vue
trackscape-discord-ui/src/components/General/: DataTable.vue  GeneralTypes.ts  SkeletonTable.vue  TextSearchSelect.vue
trackscape-discord-ui/src/components/clan/: BroadcastItem.vue  BroadcastList.vue  ClanMateWithRank.vue  DiscordWidget.vue  PersonalBestActivitySelect.vue
trackscape-discord-ui/src/components/icons/: IconCommunity.vue  IconDocumentation.vue  IconEcosystem.vue  IconSupport.vue
trackscape-discord-ui/src/router/: clans.ts  index.ts
trackscape-discord-ui/src/services/: TrackscapeApiClient.ts  TrackscapeApiTypes.ts
trackscape-discord-ui/src/stores/: PbStore.ts
trackscape-discord-ui/src/views/: BotLandingPage.vue  ClanList.vue
trackscape-discord-ui/src/views/borningStuff/: PrivacyPolicy.vue  TermsOfService.vue
trackscape-discord-ui/src/views/clans/: ClanDetail.vue  ClanListView.vue
trackscape-discord-ui/src/views/clans/clan/: ClanView.vue  CollectionLogLeaderboardView.vue  MembersView.vue
trackscape-discord-ui/src/views/clans/clan/subviews/: CollectionLogLeaderboardView.vue  LeaderboardView.vue  MembersView.vue  RecentBroadcastsView.vue
(+2 files in other folders)
