[package]
name = "osrs_announcements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
mongodb = "2.4.0"
shuttle-serenity = "0.25.0"
shuttle-runtime = "0.25.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
shuttle-secrets = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["mongodb"] }
tokio = "1.26.0"
tracing = "0.1.37"
regex = "1.9.4"
urlencoding = "2.1.3"
num-format = "0.4.4"
shuttle-persist = "0.25.0"
reqwest = {version = "0.11.20", features = ["json"]}