[workspace]
members = [
    "trackscape-discord-api",
    "trackscape-discord-bot",
    "trackscape-discord-shared",
    "trackscape-discord-job-worker",
    "trackscape-discord-cron-job-worker"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
redis = { version = "0.23.3", features = ["json"] }