[package]
name = "trackscape-discord-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
actix-web = "4.3.1"
actix-ws = "0.2.5"
chrono = { version = "0.4.23", features = ["serde"] }
mongodb = "2.4.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["mongodb"] }
shuttle-secrets = "0.25.0"
shuttle-persist = "0.25.0"
serenity = { version = "0.11.5", default-features = false, features = ["http",  "rustls_backend", "model",] }
tokio = "1.26.0"
rand = "0.8.5"
trackscape-discord-shared = { path = "../trackscape-discord-shared" }
futures-util = "0.3.28"
