[package]
name = "trackscape-discord-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
actix-web = "4.3.1"
actix-ws = "0.2.5"
chrono = { version = "0.4.23", features = ["serde"] }
mongodb = "2.4.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
serenity = { version = "0.12.2", default-features = false, features = [
    "http",
    "rustls_backend",
    "model",
] }
tokio = "1.26.0"
rand = "0.8.5"
trackscape-discord-shared = { path = "../trackscape-discord-shared" }
futures-util = "0.3.28"
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4.20"
actix-files = "0.6.2"
ammonia = "3.3.0"
num-format = "0.4.4"
serde_with = "1.14.0"
bson = { version = "^2.7", default-features = false, features = [
    "chrono-0_4",
    "serde_with",
] }
dateparser = "0.2.0"
csv = "1.3.0"
actix-cors = "0.6.4"
celery = "0.5.5"
mockall = "0.11.4"
async-trait = { version = "0.1.73", features = [] }
redis.workspace = true


[dev-dependencies]
