[package]
name = "trackscape-discord-jobs"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"]}
redis = { version = "0.22", features=["connection-manager", "tokio-comp"] }
log = "0.4"
celery = "0.5.5"
env_logger = "0.10"
anyhow = "1.0.14"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.25"
trackscape-discord-shared = { path = "../trackscape-discord-shared" }
