[package]
name = "trackscape-discord-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
bson = { version = "2.10.0", features = ["chrono-0_4"] }
tracing = "0.1.37"
num-format = "0.4.4"
futures = "0.3.28"
rand = "0.8.5"
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["json"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
mongodb = "2.4.0"
urlencoding = "2.1.3"
tokio = "1.26.0"
log = "0.4.20"
async-trait = "0.1.73"
mockall = "0.11.4"
anyhow = "1.0.75"
celery = "0.5.5"
redis = { version = "0.23.3", features = ["json"] }
wom_rs = { git = "https://github.com/fatfingers23/wom_rs.git" }
chrono = "0.4.33"

[dev-dependencies]
rstest = "0.19.0"
